[package]
name = "bifrost-testnet-node"
version = "1.0.0"
description = "The node specification for BIFROST Node testnet"
authors = { workspace = true }
homepage = { workspace = true}
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# third-party dependencies
serde_json = "1.0"
jsonrpc-core = "18.0.0"
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = { version = "0.3" }
hex-literal = { version = "0.3.1" }
tokio = { version = "1.13.0", features = ["macros", "sync"] }

# substrate client dependencies
sc-client-api = { workspace = true }
sc-executor = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus = { workspace = true }
sc-finality-grandpa = { workspace = true }
sc-finality-grandpa-rpc = { workspace = true }
sc-network = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-chain-spec = { workspace = true }
sc-basic-authorship = { workspace = true }

# substrate primitives dependencies
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-api = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true, features = ["std"] }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-finality-grandpa = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }

# FRAME dependencies
pallet-bfc-staking = { path = "../../pallets/bfc-staking" }
pallet-im-online = { workspace = true, features = ["std"] }
pallet-transaction-payment-rpc = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# Frontier dependencies
fc-db = { workspace = true }
fc-rpc-core = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc-txpool = { workspace = true }
fc-rpc-debug = { workspace = true }
fc-rpc-trace = { workspace = true }
fc-rpc = { workspace = true, features = ["rpc-binary-search-estimate"] }

fp-storage = { workspace = true }
fp-ext = { workspace = true, features = ["std"] }
fp-rpc = { workspace = true, features = ["std"] }
fp-rpc-txpool = { workspace = true, features = ["std"] }
pallet-evm = { workspace = true, features = ["std"] }

pallet-ethereum = { workspace = true, features = ["forbid-evm-reentrancy"] }

# benchmarking dependencies
frame-benchmarking-cli = { workspace = true }
frame-benchmarking = { workspace = true, features = ["std"] }

# Local Dependencies
bp-core = { default-features = false, path = "../../primitives/core" }
bifrost-testnet-runtime = { path = "../../runtime/testnet", features = ["std", "evm-tracing"] }
bifrost-testnet-constants = { path = "../../runtime/testnet/constants" }
bifrost-common-node = { path = "../common" }

[features]
default = []
runtime-benchmarks = [
	"bifrost-testnet-runtime/runtime-benchmarks",
]
