[package]
name = "pallet-bfc-offences"
version = "1.0.0"
description = "bfc offences pallet for validator offences management"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
log = { workspace = true }

# Substrate
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }

# Bifrost
bp-staking = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-staking/std",
	"bp-staking/std",
]
try-runtime = ["frame-support/try-runtime"]
