[package]
name = "pallet-bfc-staking"
version = "1.0.0"
description = "bfc staking pallet for validator selection and reward distribution"
authors = { workspace = true }
homepage = { workspace = true}
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
log = "0.4"
serde = { version = "1.0.101", optional = true }
substrate-fixed = { workspace = true }

# Substrate
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.2.1", default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
pallet-session = { workspace = true, features = ["historical"] }
pallet-authorship = { workspace = true }
pallet-im-online = { workspace = true }

# Bifrost
pallet-relay-manager = { default-features = false, path = "../../pallets/relay-manager" }
pallet-bfc-offences = { default-features = false, path = "../../pallets/bfc-offences" }
bp-staking = { default-features = false, path = "../../primitives/bfc-staking" }

[dev-dependencies]
similar-asserts = "1.1.0"

pallet-balances = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"pallet-authorship/std",
	"pallet-im-online/std",
	"pallet-relay-manager/std",
	"pallet-bfc-offences/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
	"sp-staking/std",
	"sp-io/std",
	"bp-staking/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
