[package]
name = "pallet-bfc-staking"
version = "1.0.0"
description = "bfc staking pallet for validator selection and reward distribution"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
log = { workspace = true }
serde = { workspace = true }
substrate-fixed = { workspace = true }

# Substrate
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
pallet-session = { workspace = true, features = ["historical"] }
pallet-authorship = { workspace = true }

# Bifrost
bp-staking = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"pallet-authorship/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-staking/std",
	"bp-staking/std",
]
try-runtime = ["frame-support/try-runtime"]
