[package]
name = "pallet-btc-socket-queue"
version = "1.0.0"
description = "A pallet for btc socket queue"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
log = { workspace = true }
hex = { workspace = true }
array-bytes = { workspace = true }
ethabi-decode = { workspace = true }

# Substrate
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }

# Bifrost
bp-multi-sig = { workspace = true }

# Frontier
pallet-evm = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"bp-multi-sig/std",
	"pallet-evm/std",
]
